// Copyright (c) 2020 Bitcoin Association

namespace MerchantAPI.Common.Database
{
  public class Version
  {
    public int VersionId { get; set; }
    public int Updating { get; set; }
  }
}
